--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <h1>Welcome to Netflix</h1>
         </div>
         <div class="header__infoActions">
-          <button><img src="" alt="" />Play</button>
+          <button><img src="" alt="" />Play Movie</button>
           <button><img src="" alt="" />More info</button>
         </div>
       </div>
